          font-size:0.7em; 
          /* margin-bottom:1em; */ }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#d0d0d0 }
      li { margin-left: -15px;  }
    </style>
  </head>
  <body>
<!--
TODO
* TODO NO NETWORK ICON
* PHOTOS+ UPLOAD
* INLINE PHOTOS
* UPLOAD PHOTOS TO DROPBOX?
* QUOTES FROM TEXT SELECTION
* SEARCH GOOGLE BY TEXT SELECTION
-->

$ 5.3.2
% v 5.3.2
_ Jan 24, 2015
* Backup Agent disabled. I think this may have been screwing up notifications on reinstalls
* Bug Fix: Some chatty links not loading in app

$ 5.3.1
% v 5.3.1
_ Jan 24, 2015
* Popup Browser now loads imgur albums correctly
* Popup Browser now clears cache occasionally to prevent errors/crashes
* Option to allow collapsing posts by clicking on them. You guys are weird.
* Chrome Tabs are no longer default on
* Bug Fix: Crash on zoom adjust
* Bug Fix: Inline images not recognizing UPPERCASE EXTENSIONS

$ 5.3.0
% v 5.3.0
_ Jan 18, 2016
* Chrome Tabs for browser (major enhancement for built-in web browser)
* WinChatty NuSearch is now used if you have a v2 API selected. Older APIs use shack search
* Support undoing your LOL (just LOL it again, instead of an error you now undo it)
* Support for older chatty URLs
* No longer possible to close a post by clicking the header
* Can copy username of a post to clipboard
* Bug Fix: Custom LOLs weren't being shown correctly in search. Custom LOL is still unsupported generally
* Bug Fix: Stats not working with cloud sync/cloud sync not working (data corruption event on server, corrupted data is now handled correctly)

$ 5.2.3
% v 5.2.3
_ Dec 11, 2015
* Bug Fix: Crash in Android 6.0 devices when selecting text and tapping outside selected text

$ 5.2.2
% v 5.2.2
_ Oct 11, 2015
* Samsung Multi-window support added
* Bug Fix: Crash when posting to the last thread in the thread list

$ 5.2.1
% v 5.2.1
_ Aug 27, 2015
* Can long click embedded images for options menu
* Bug Fix: Fixed clipping issue with large font zoom on root post username