@@ -17,7 +17,7 @@
 <uses-permission android:name="net.woggle.shackbrowse.permission.C2D_MESSAGE" />
 
 
-<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21"></uses-sdk>
+<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23"></uses-sdk>
 
 
     <application android:theme="@style/AppTheme" android:hardwareAccelerated="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:largeHeap="true">
