@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 
@@ -12,14 +12,15 @@ apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
-    compile "com.android.support:support-v4:21.0.+"
+    compile 'com.android.support:support-v4:21.0.+'
     compile 'com.afollestad:material-dialogs:0.6.2.4'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile 'com.github.bumptech.glide:glide:3.6.0'
@@ -27,10 +28,11 @@ dependencies {
 }
 
 android {
+    // useLibrary 'org.apache.http.legacy'
     signingConfigs {
         release
     }
-    compileSdkVersion 21
+    compileSdkVersion 'android-21'
     buildToolsVersion '21.1.2'
     compileOptions.encoding = 'windows-1251'
     sourceSets {
@@ -64,32 +66,36 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 def propFile = file('../signing.properties')
-if( propFile.canRead() ) {
-  def Properties p = new Properties()
-  p.load(new FileInputStream(propFile))
+if (propFile.canRead()) {
+    def Properties p = new Properties()
+    p.load(new FileInputStream(propFile))
 
-  if( p!=null
-  &&  p.containsKey('STORE_FILE')
-  &&  p.containsKey('STORE_PASSWORD')
-  &&  p.containsKey('KEY_ALIAS')
-  &&  p.containsKey('KEY_PASSWORD')
-  ) {
-    println "RELEASE_BUILD: Signing..."
+    if (p != null
+            && p.containsKey('STORE_FILE')
+            && p.containsKey('STORE_PASSWORD')
+            && p.containsKey('KEY_ALIAS')
+            && p.containsKey('KEY_PASSWORD')
+    ) {
+        println "RELEASE_BUILD: Signing..."
 
-    android.signingConfigs.release.storeFile = file( p['STORE_FILE'] )
-    android.signingConfigs.release.storePassword = p['STORE_PASSWORD']
-    android.signingConfigs.release.keyAlias = p['KEY_ALIAS']
-    android.signingConfigs.release.keyPassword = p['KEY_PASSWORD']
+        android.signingConfigs.release.storeFile = file(p['STORE_FILE'])
+        android.signingConfigs.release.storePassword = p['STORE_PASSWORD']
+        android.signingConfigs.release.keyAlias = p['KEY_ALIAS']
+        android.signingConfigs.release.keyPassword = p['KEY_PASSWORD']
 
-  } else {
-    println "RELEASE_BUILD: Required properties in signing.properties are missing"
-    android.buildTypes.release.signingConfig = null
-  }
+    } else {
+        println "RELEASE_BUILD: Required properties in signing.properties are missing"
+        android.buildTypes.release.signingConfig = null
+    }
 
 } else {
-  println "RELEASE_BUILD: signing.properties not found"
-  android.buildTypes.release.signingConfig = null
+    println "RELEASE_BUILD: signing.properties not found"
+    android.buildTypes.release.signingConfig = null
 }
