@@ -77,7 +77,11 @@
         <item>add a little honey and lime to make it NASTY GOOD!</item>
         <item>But the gay I do have is in my stomach</item>
         <item>the dentist. the dentist must repent.</item>
-        <item>My rug\'s been sucked clean in record time.</item>
+        <item>My rug\'s been sucked clean in record time.</item> <!-- http://www.shacknews.com/chatty?id=34705407 -->
+        <item>MY RICH GRANDMA-IN-LAW</item> <!-- http://www.shacknews.com/chatty?id=30043041 -->
+        <item>What\'s on your plate today?</item>
+        <item>is this the half life 3 ARG?</item><!-- http://www.shacknews.com/chatty?id=28688125 -->
+        <item>get out of here, chicken!</item><!-- http://www.shacknews.com/chatty?id=34709595 -->
     </string-array>
     <string-array name="preference_theme">
         <item>Normal</item>
