@@ -5,8 +5,8 @@ import java.util.HashSet;
 
 public class User {
 
-    private final static HashSet<String> MODS = new HashSet<String>(Arrays.asList(new String[] { "ajax", "megara9", "morgin", "bitchesbecrazy", "frozen pixel", "eonix", "hirez", "helvetica", "thekidd", "zakk", "edgewise", "loioshdwaggie", "multisync", "rauol duke", "deathlove", "evildolemite", "redfive", "thaperfectdrug", "woddemandred", "edgewise", "sgtsanity" }));
-    private final static HashSet<String> EMPLOYEES = new HashSet<String>(Arrays.asList(new String[] { "the man with the briefcase", "staymighty", "hammersuit", "shacknews", "aaron linde", "jeff mattas", "garnett lee", "brian leahy", "ackbar2020", "xavdematos", "shugamom" }));
+    private final static HashSet<String> MODS = new HashSet<String>(Arrays.asList(new String[] { "bitchesbecrazy",    "degenerate",    "EvilDolemite",    "hirez",    "Morgin",    "ninjase",    "Portax",    "redfive",    "Serpico74",    "thaperfectdrug" }));
+    private final static HashSet<String> EMPLOYEES = new HashSet<String>(Arrays.asList(new String[] { "the man with the briefcase", "SporkyReeve",    "Daniel_Perez",    "Joshua Hawkins",    "Brittany Vincent",    "beardedaxe",    "GBurke59",    "plonkus",    "hammersuit",    "staymighty", "shugamom" }));
 
     public static Boolean isEmployee(String userName)
     {
